--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -8,6 +8,9 @@
   "tech": "테크",
   "design": "디자인",
   "trends": "트렌드",
+  "all": "전체",
+  "etc": "기타",
   "niceMeetYouWhatIsYourHobby": "만나서 반가워요!\n어떤 주제에 관심있나요?",
-  "itUsedRecommendingCategory": "공개 카테고리 추천에 활용돼요."
+  "chooseMaximum3": "최대 3개 선택",
+  "selectCompleted": "선택완료"
 }
