--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -12,5 +12,23 @@
   "etc": "기타",
   "niceMeetYouWhatIsYourHobby": "만나서 반가워요!\n어떤 주제에 관심있나요?",
   "chooseMaximum3": "최대 3개 선택",
-  "selectCompleted": "선택완료"
+  "selectCompleted": "선택완료",
+  "setProfileAndNickName": "마지막으로\n프로필과 닉네임을 설정해 주세요.",
+  "profile": "프로필",
+  "nickName": "닉네임",
+  "complete": "완료",
+  "edit": "편집",
+  "upload": "업로드",
+  "setProfile": "프로필 사진 설정",
+  "cancel": "취소",
+  "selectDefaultImage": "기본 이미지 선택",
+  "selectFromPhotoLibrary": "앨범에서 사진 선택",
+  "selectFromCamera": "사진 찍기",
+  "pleaseAllowPhotoPermission": "사진 권한을 설정해주세요",
+  "photoPermissionGuideIOS": "\"설정 > 사진 > 모든 사진\" 권한을 허용해 주세요",
+  "photoPermissionGuideAndroid": "\"설정 > 권한 > 사진과 비디오\" 권한을 허용해 주세요",
+  "confirm": "확인",
+  "pleaseAllowCameraPermission": "카메라 권한을 설정해주세요",
+  "cameraPermissionGuideIOS": "\"설정 > 카메라\" 권한을 허용해 주세요",
+  "cameraPermissionGuideAndroid": "\"설정 > 권한 > 카메라\" 권한을 허용해 주세요"
 }
