feat: add kakao login

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AllChiveMobile</string>
+    <string name="kakao_app_key">{네이티브 앱 키}</string>
 </resources>
