feat: 로그인 화면 추가, 카카오 로그인 구현

--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -34,5 +34,6 @@
   "nicknamePlaceholder": "예) 올카이브",
   "easilyManageContent": "컨텐츠를 손쉽게\n분류하고 관리해요!",
   "shareCategoryWithPeople": "같은 관심사를 가진 사람들과\n카테고리를 공유해요.",
-  "next": "다음"
+  "next": "다음",
+  "simpleLogin": "간편 로그인"
 }
