--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -10,7 +10,7 @@
   "trends": "트렌드",
   "all": "전체",
   "etc": "기타",
-  "niceMeetYouWhatIsYourHobby": "만나서 반가워요!\n어떤 주제에 관심있나요?",
+  "niceMeetYouWhatIsYourHobby": "만나서 반가워요!\n어떤 카테고리에 관심있나요?",
   "chooseMaximum3": "최대 3개 선택",
   "selectCompleted": "선택완료",
   "setProfileAndNickName": "마지막으로\n프로필과 닉네임을 설정해 주세요.",
