feat: update add profile screen

--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -59,5 +59,7 @@
   "reportComplete": "더 나은 커뮤니티를 위한\n신고 완료!",
   "reviewReasonForReport": "신고 사유 검토 후 적절한 조취를 취하겠습니다.",
   "backToCommunity": "커뮤니티로 돌아가기",
-  "placeholder": "내용을 입력해주세요."
+  "placeholder": "내용을 입력해주세요.",
+  "nicknameVerify": "한/영문/숫자 1~20자리 이내",
+  "isNotDuplicate": "중복되지 않는 닉네임"
 }
