feat: add content list screen

--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -42,6 +42,7 @@
   "archiving": "아카이빙",
   "community": "커뮤니티",
   "photo": "사진",
+  "image": "이미지",
   "link": "링크",
   "youHaveSavedArchives": "현재까지 총 {{number, number}}개의\n아카이빙을\n저장하고 계세요!",
   "tag": "태그",
@@ -61,5 +62,7 @@
   "backToCommunity": "커뮤니티로 돌아가기",
   "placeholder": "내용을 입력해주세요.",
   "nicknameVerify": "한/영문/숫자 1~20자리 이내",
-  "isNotDuplicate": "중복되지 않는 닉네임"
+  "isNotDuplicate": "중복되지 않는 닉네임",
+  "update": "수정하기",
+  "remove": "삭제하기"
 }
