feat: ArchivingModal 수정, Divider 추가, ko.json 수정

--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -1,13 +1,13 @@
 {
   "food": "푸드",
   "life": "라이프",
-  "homeAndLiving": "홈/리빙",
+  "homeLiving": "홈/리빙",
   "shopping": "쇼핑",
-  "sports": "스포츠",
-  "selfDevelopment": "자기계발",
+  "sport": "스포츠",
+  "selfImprovement": "자기계발",
   "tech": "테크",
   "design": "디자인",
-  "trends": "트렌드",
+  "trend": "트렌드",
   "all": "전체",
   "etc": "기타",
   "niceMeetYouWhatIsYourHobby": "만나서 반가워요!\n어떤 카테고리에 관심있나요?",
