feat: add report to content list

--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -64,5 +64,13 @@
   "nicknameVerify": "한/영문/숫자 1~20자리 이내",
   "isNotDuplicate": "중복되지 않는 닉네임",
   "update": "수정하기",
-  "remove": "삭제하기"
+  "remove": "삭제하기",
+  "reportThisContent": "이 게시물 신고하기",
+  "blockThisUser": "이 작성자 차단하기",
+  "doYouWantBlockThisUser": "이 작성자를 차단하시겠어요?\n차단 여부는 상대방이 알 수 없어요!",
+  "youCanUnblockUserAnytime": "차단 해제는 마이페이지에서 언제든지 가능합니다.",
+  "block": "차단",
+  "unblock": "해제",
+  "blockComplete": "{{nickname, string}}님 차단 완료!",
+  "youCannotSeeBlockUserContents": "{{nickname, string}}님의 카테고리를 더이상 볼 수 없어요."
 }
