feat: update ko.json

--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -44,10 +44,19 @@
   "community": "커뮤니티",
   "photo": "사진",
   "image": "이미지",
+  "uploadImage": "이미지 업로드",
   "link": "링크",
+  "placeHolderLink": "링크를 입력하세요",
   "youHaveSavedArchives": "현재까지 총 {{number, number}}개의\n아카이빙을\n저장하고 계세요!",
   "tag": "태그",
+  "addTag": "태그 추가",
+  "searchTag": "태그를 검색해보세요",
+  "notExistTag": "검색한 태그가 없습니다.",
+  "askCreateTag": "새로운 태그로 등록할까요?",
+  "createTag": "태그 등록하기",
+  "recentlyTag": "최근 사용한 태그",
   "memo": "메모",
+  "placeHolderMemo": "메모를 입력하세요",
   "selectReportReason": "신고하는 이유를 선택해주세요.",
   "reportSpam": "스팸이에요",
   "reportObsceneContent": "음란성 컨텐츠를 담고있어요",
@@ -63,7 +72,21 @@
   "backToCommunity": "커뮤니티로 돌아가기",
   "placeholder": "내용을 입력해주세요.",
   "nicknameVerify": "한/영문/숫자 1~20자리 이내",
+  "contentVerify": "한/영/특수문자 15자 이내로 입력하세요",
   "isNotDuplicate": "중복되지 않는 닉네임",
   "update": "수정하기",
-  "remove": "삭제하기"
+  "remove": "삭제하기",
+  "choice": "선택사항",
+  "choice10": "선택사항 (최대 10개)",
+  "checkUrl": "올바른 url 주소",
+  "archivingName": "아카이빙 이름",
+  "contentName": "컨텐츠 이름",
+  "choiceArchiving": "아카이빙을 선택하세요",
+  "addArchiving": "아카이빙 추가",
+  "category": "카테고리",
+  "thumbnail": "썸네일",
+  "settingThumbnail": "썸네일 사진 설정",
+  "settingPublic": "공개설정",
+  "guideSettingPublic": "공개설정 여부는 언제든지 변경할 수 있습니다.",
+  "add": "추가하기"
 }
