--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -88,5 +88,6 @@
   "settingThumbnail": "썸네일 사진 설정",
   "settingPublic": "공개설정",
   "guideSettingPublic": "공개설정 여부는 언제든지 변경할 수 있습니다.",
-  "add": "추가하기"
+  "add": "추가하기",
+  "noSelectCategory": "카테고리 선택 안함"
 }
