--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -13,7 +13,7 @@
   "niceMeetYouWhatIsYourHobby": "만나서 반가워요!\n어떤 카테고리에 관심있나요?",
   "chooseMaximum3": "최대 3개 선택",
   "selectCompleted": "선택완료",
-  "setProfileAndNickName": "마지막으로\n프로필과 닉네임을 설정해 주세요.",
+  "pleaseSetProfile": "마지막으로\n프로필을 설정해 주세요.",
   "profile": "프로필",
   "nickName": "닉네임",
   "complete": "완료",
