--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -97,5 +97,6 @@
   "block": "차단",
   "unblock": "해제",
   "blockComplete": "{{nickname, string}}님 차단 완료!",
-  "youCannotSeeBlockUserContents": "{{nickname, string}}님의 카테고리를 더이상 볼 수 없어요."
+  "youCannotSeeBlockUserContents": "{{nickname, string}}님의 카테고리를 더이상 볼 수 없어요.",
+  "noMoreTag": "태그 개수가 10개가 초과되어\n더이상 태그를 추가할 수 없습니다."
 }
