feat: 아카이빙 삭제 기능 구현

--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -98,5 +98,6 @@
   "unblock": "해제",
   "blockComplete": "{{nickname, string}}님 차단 완료!",
   "youCannotSeeBlockUserContents": "{{nickname, string}}님의 카테고리를 더이상 볼 수 없어요.",
-  "doYouWantDeleteThisContent": "이 컨텐츠를 휴지통에\n버리시겠어요?"
+  "doYouWantDeleteThisContent": "이 컨텐츠를 휴지통에\n버리시겠어요?",
+  "doYouWantDeleteThisArchiving": "이 아카이빙을 휴지통에\n버리시겠어요?"
 }
