feat: update category enum

--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -1,15 +1,15 @@
 {
-  "food": "푸드",
-  "life": "라이프",
-  "home_living": "홈/리빙",
-  "shopping": "쇼핑",
-  "sport": "스포츠",
-  "self_improvement": "자기계발",
-  "tech": "테크",
-  "design": "디자인",
-  "trend": "트렌드",
-  "all": "전체",
-  "etc": "기타",
+  "FOOD": "푸드",
+  "LIFE": "라이프",
+  "HOME_LIVING": "홈/리빙",
+  "SHOPPING": "쇼핑",
+  "SPORT": "스포츠",
+  "SELF_IMPROVEMENT": "자기계발",
+  "TECH": "테크",
+  "DESIGN": "디자인",
+  "TREND": "트렌드",
+  "ALL": "전체",
+  "ETC": "기타",
   "niceMeetYouWhatIsYourHobby": "만나서 반가워요!\n어떤 카테고리에 관심있나요?",
   "chooseMaximum3": "최대 3개 선택",
   "selectCompleted": "선택완료",
