feat: EditArchiving 연결, ContentList data 수정

--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -83,6 +83,7 @@
   "contentName": "컨텐츠 이름",
   "choiceArchiving": "아카이빙을 선택하세요",
   "addArchiving": "아카이빙 추가",
+  "editArchiving": "아카이빙 수정",
   "category": "카테고리",
   "thumbnail": "썸네일",
   "settingThumbnail": "썸네일 사진 설정",
