--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -102,5 +102,7 @@
   "noMoreTag": "태그 개수가 10개가 초과되어\n더이상 태그를 추가할 수 없습니다.",
   "pleaseEnterSearchKeyword": "검색어를 입력해주세요",
   "doYouWantDeleteThisContent": "이 컨텐츠를 휴지통에\n버리시겠어요?",
-  "doYouWantDeleteThisArchiving": "이 아카이빙을 휴지통에\n버리시겠어요?"
+  "doYouWantDeleteThisArchiving": "이 아카이빙을 휴지통에\n버리시겠어요?",
+  "recentlySearchText": "최근 검색어",
+  "allRemove": "전체 삭제"
 }
