--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -106,5 +106,7 @@
   "userName": "{{nickname, string}}님",
   "scrapArchiveYouWant": "원하는 아카이빙을\n스크랩 해보세요",
   "recentlySearchText": "최근 검색어",
-  "allRemove": "전체 삭제"
+  "allRemove": "전체 삭제",
+  "numberOfsearchResult": "총 {{number, number}}개의 검색 결과",
+  "myArchiving": "내 아카이빙"
 }
