--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -104,5 +104,13 @@
   "doYouWantDeleteThisContent": "이 컨텐츠를 휴지통에\n버리시겠어요?",
   "doYouWantDeleteThisArchiving": "이 아카이빙을 휴지통에\n버리시겠어요?",
   "userName": "{{nickname, string}}님",
-  "scrapArchiveYouWant": "원하는 아카이빙을\n스크랩 해보세요"
+  "scrapArchiveYouWant": "원하는 아카이빙을\n스크랩 해보세요",
+  "mypage": "마이 페이지",
+  "myAccount": "내 계정",
+  "archivingManagement": "아카이빙 관리",
+  "tagManagement": "태그 관리",
+  "blockManagement": "차단 관리",
+  "termsOfService": "이용약관",
+  "communityUsePolicy": "커뮤니티 이용 정책",
+  "recycleBin": "휴지통"
 }
