--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -119,7 +119,7 @@
   "email": "이메일",
   "deleteAccount": "계정삭제",
   "doYouWantWithdrawal": "이 계정을 삭제하시겠어요?",
-  "deletedAccountCannotRestore": "삭제한 계정은 복구할 수 없습니다."
+  "deletedAccountCannotRestore": "삭제한 계정은 복구할 수 없습니다.",
   "recentlySearchText": "최근 검색어",
   "allRemove": "전체 삭제",
   "numberOfsearchResult": "총 {{number, number}}개의 검색 결과",
