--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -34,7 +34,7 @@
   "cameraPermissionGuideAndroid": "\"설정 > 권한 > 카메라\" 권한을 허용해 주세요",
   "nicknamePlaceholder": "예) 올카이브",
   "easilyManageContent": "컨텐츠를 손쉽게\n분류하고 관리해요!",
-  "shareCategoryWithPeople": "같은 관심사를 가진 사람들과\n카테고리를 공유해요.",
+  "shareCategoryWithPeople": "같은 관심사를 가진 사람들과\n아카이빙을 공유해요.",
   "next": "다음",
   "simpleLogin": "간편 로그인",
   "fix": "고정",
@@ -103,7 +103,7 @@
   "doYouWantDeleteThisContent": "이 컨텐츠를 휴지통에\n버리시겠어요?",
   "doYouWantDeleteThisArchiving": "이 아카이빙을 휴지통에\n버리시겠어요?",
   "userName": "{{nickname, string}}님",
-  "scrapArchiveYouWant": "원하는 아카이빙을\n스크랩 해보세요",
+  "scrapArchiveYouWant": "지금 마음에 드는\n아카이빙을 스크랩에\n추가해보세요!",
   "mypage": "마이 페이지",
   "myAccount": "내 계정",
   "archivingManagement": "아카이빙 관리",
