--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -122,5 +122,9 @@
   "recentlySearchText": "최근 검색어",
   "allRemove": "전체 삭제",
   "numberOfsearchResult": "총 {{number, number}}개의 검색 결과",
-  "myArchiving": "내 아카이빙"
+  "myArchiving": "내 아카이빙",
+  "doYouWantDeleteThisTag": "이 태그를 삭제하시겠어요?",
+  "deleteTagsCannotBeRestored": "삭제한 태그는 복구할 수 없습니다.",
+  "createNewTag": "새 태그 만들기",
+  "register": "등록"
 }
