--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -69,6 +69,7 @@
   "reportComplete": "더 나은 커뮤니티를 위한\n신고 완료!",
   "reviewReasonForReport": "신고 사유 검토 후 적절한 조취를 취하겠습니다.",
   "backToCommunity": "커뮤니티로 돌아가기",
+  "backToMypage": "마이페이지로 돌아가기",
   "placeholder": "내용을 입력해주세요.",
   "nicknameVerify": "한/영문/숫자 1~20자리 이내",
   "contentVerify": "한/영/특수문자 15자 이내로 입력하세요",
@@ -98,6 +99,8 @@
   "unblock": "해제",
   "blockComplete": "{{nickname, string}}님 차단 완료!",
   "youCannotSeeBlockUserContents": "{{nickname, string}}님의 카테고리를 더이상 볼 수 없어요.",
+  "doYouWantUnblockThisUser": "{{nickname, string}}님을 차단 해제하시겠어요?",
+  "unblockComplete": "{{nickname, string}}님 차단 해제!",
   "noMoreTag": "태그 개수가 10개가 초과되어\n더이상 태그를 추가할 수 없습니다.",
   "pleaseEnterSearchKeyword": "검색어를 입력해주세요",
   "doYouWantDeleteThisContent": "이 컨텐츠를 휴지통에\n버리시겠어요?",
@@ -122,5 +125,6 @@
   "recentlySearchText": "최근 검색어",
   "allRemove": "전체 삭제",
   "numberOfsearchResult": "총 {{number, number}}개의 검색 결과",
-  "myArchiving": "내 아카이빙"
+  "myArchiving": "내 아카이빙",
+  "noAuthorBlocked": "차단한 작성자가 없습니다"
 }
