--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -42,6 +42,7 @@
   "report": "신고하기",
   "archiving": "아카이빙",
   "community": "커뮤니티",
+  "contents": "컨텐츠",
   "image": "이미지",
   "uploadImage": "이미지 업로드",
   "link": "링크",
@@ -115,6 +116,7 @@
   "termsOfService": "이용약관",
   "communityUsePolicy": "커뮤니티 이용 정책",
   "recycleBin": "휴지통",
+  "emptyRecycleBin": "휴지통 비어있습니다",
   "appVersion": "앱 버전정보",
   "logout": "로그아웃",
   "name": "이름",
@@ -125,6 +127,7 @@
   "recentlySearchText": "최근 검색어",
   "allRemove": "전체 삭제",
   "numberOfsearchResult": "총 {{number, number}}개의 검색 결과",
+  "numberOfRecycleItem": "총 {{number, number}}개",
   "myArchiving": "내 아카이빙",
   "noAuthorBlocked": "차단한 작성자가 없습니다"
 }
