feat: update Mypage

--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -115,7 +115,11 @@
   "tagManagement": "태그 관리",
   "blockManagement": "차단 관리",
   "termsOfService": "이용약관",
+  "privacyPolicy": "개인정보 처리방침",
   "communityUsePolicy": "커뮤니티 이용 정책",
+  "notice": "공지사항",
+  "emptyNotice": "공지사항이 없습니다",
+  "customerService": "고객센터",
   "recycleBin": "휴지통",
   "emptyRecycleBin": "휴지통 비어있습니다",
   "appVersion": "앱 버전정보",
