--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -151,5 +151,7 @@
   "noCommunityArchiving": "아직 커뮤니티 아카이빙이 없어요!",
   "noHomeArchiving": "아직 내 아카이빙이 비어있어요!",
   "alreadyReported": "이미 신고한 게시물이에요!",
-  "pleaseWaitReporting": "신고 사유가 검토 중이니 기다려주세요!"
+  "pleaseWaitReporting": "신고 사유가 검토 중이니 기다려주세요!",
+  "loading": "로딩중",
+  "pleaseWait": "잠시만 기다려주세요!"
 }
