feat: add ErrorDialog (Home, Community)
- 중복되는 코드가 많아 DefaultDialog 대신 ErrorDialog를 사용하도록 구현하였습니다.

--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -153,5 +153,9 @@
   "alreadyReported": "이미 신고한 게시물이에요!",
   "pleaseWaitReporting": "신고 사유가 검토 중이니 기다려주세요!",
   "loading": "로딩중",
-  "pleaseWait": "잠시만 기다려주세요!"
+  "pleaseWait": "잠시만 기다려주세요!",
+  "temporaryError": "일시적인 오류에요",
+  "couldntGetInformation": "정보를 불러오지 못 했어요",
+  "pleaseRetryLittleWhile": "잠시 후에 다시 시도해주세요!",
+  "retry": "다시 시도하기"
 }
