--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -10,7 +10,7 @@
   "TREND": "트렌드",
   "ALL": "전체",
   "ETC": "기타",
-  "niceMeetYouWhatIsYourHobby": "만나서 반가워요!\n어떤 카테고리에 관심있나요?",
+  "niceMeetYouWhatIsYourHobby": "가입을 축하해요!\n어떤 카테고리에 관심있나요?",
   "chooseMaximum3": "최대 3개 선택",
   "selectCompleted": "선택완료",
   "pleaseSetProfile": "마지막으로\n프로필을 설정해 주세요.",
