feat: 가입 쪽 문구 변경
- 문구가 변경될 때마다 ko.json 네이밍도 변경해줘야 하는 번거로움이 존재
- 추후에 시멘틱한 표현으로 ko.json을 갈아엎어보면 어떨까 싶어요

--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -10,7 +10,8 @@
   "TREND": "트렌드",
   "ALL": "전체",
   "ETC": "기타",
-  "niceMeetYouWhatIsYourHobby": "만나서 반가워요!\n어떤 카테고리에 관심있나요?",
+  "agreementHeading": "만나서 반가워요!\n약관에 동의해주세요.",
+  "selectCategoryHeading": "가입을 축하해요!\n어떤 카테고리에 관심있나요?",
   "chooseMaximum3": "최대 3개 선택",
   "selectCompleted": "선택완료",
   "pleaseSetProfile": "마지막으로\n프로필을 설정해 주세요.",
