--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -11,6 +11,11 @@
   "ALL": "전체",
   "ETC": "기타",
   "agreementHeading": "만나서 반가워요!\n약관에 동의해주세요.",
+  "allAgreement": "약관 전체 동의",
+  "allAgreementDescription": "서비스 이용을 위해 아래 약관에 모두 동의합니다.",
+  "termsAgreement": "이용약관 동의 (필수)",
+  "privacyAgreement": "개인정보 처리 방침 동의 (필수)",
+  "marketingAgreement": "마케팅 정보 수신 동의 (선택)",
   "selectCategoryHeading": "가입을 축하해요!\n어떤 카테고리에 관심있나요?",
   "chooseMaximum3": "최대 3개 선택",
   "selectCompleted": "선택완료",
