feat: 변경된 문구 수정

--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -20,6 +20,7 @@
   "chooseMaximum3": "최대 3개 선택",
   "selectCompleted": "선택완료",
   "pleaseSetProfile": "마지막으로\n닉네임을 설정해 주세요.",
+  "startAllChive": "올카이브 시작하기",
   "profile": "프로필",
   "nickName": "닉네임",
   "complete": "완료",
@@ -114,7 +115,7 @@
   "doYouWantDeleteThisContent": "이 컨텐츠를 휴지통에\n버리시겠어요?",
   "doYouWantDeleteThisArchiving": "이 아카이빙을 휴지통에\n버리시겠어요?",
   "userName": "{{nickname, string}}님",
-  "scrapArchiveYouWant": "지금 마음에 드는\n아카이빙을 스크랩에\n추가해보세요!",
+  "communityTabTitle": "지금 가장 인기있는\n올카이브 아카이빙을\n스크랩에 추가해보세요!",
   "mypage": "마이 페이지",
   "myAccount": "내 계정",
   "archivingManagement": "아카이빙 관리",
