feat: add emptyView in ContentList
- margin-top 값이 다른 emptyView와 달라 따로 넣어주었습니다.

--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -158,6 +158,7 @@
   "noScrapArchiving": "스크랩한 아카이빙이 없어요!",
   "noCommunityArchiving": "아직 커뮤니티 아카이빙이 없어요!",
   "noHomeArchiving": "아직 내 아카이빙이 비어있어요!",
+  "emptyArchiving": "아카이빙이 비어있어요!",
   "alreadyReported": "이미 신고한 게시물이에요!",
   "pleaseWaitReporting": "신고 사유가 검토 중이니 기다려주세요!",
   "loading": "로딩중",
