feat: add openSourceLicense url

--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -126,6 +126,7 @@
   "communityUsePolicy": "커뮤니티 이용 정책",
   "notice": "공지사항",
   "emptyNotice": "공지사항이 없습니다",
+  "openSourceLicense": "오픈소스 라이선스",
   "customerService": "고객센터",
   "recycleBin": "휴지통",
   "emptyRecycleBin": "휴지통 비어있습니다",
