feat: update permission message

--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -33,11 +33,11 @@
   "selectFromFile": "파일에서 사진 선택",
   "selectFromCamera": "사진 찍기",
   "pleaseAllowPhotoPermission": "사진 권한을 설정해주세요",
-  "photoPermissionGuideIOS": "\"설정 > 사진 > 모든 사진\" 권한을 허용해 주세요",
+  "photoPermissionGuideIOS": "사진 첨부 기능을 사용하시려면 \n'사진' 접근 권한을 허용해야 합니다.",
   "photoPermissionGuideAndroid": "\"설정 > 권한 > 사진과 비디오\" 권한을 허용해 주세요",
   "confirm": "확인",
   "pleaseAllowCameraPermission": "카메라 권한을 설정해주세요",
-  "cameraPermissionGuideIOS": "\"설정 > 카메라\" 권한을 허용해 주세요",
+  "cameraPermissionGuideIOS": "촬영 후 사진을 첨부하시려면 \n'카메라' 접근 권한을 허용해야 합니다.",
   "cameraPermissionGuideAndroid": "\"설정 > 권한 > 카메라\" 권한을 허용해 주세요",
   "nicknamePlaceholder": "예) 올카이브",
   "easilyManageContent": "컨텐츠를 손쉽게\n분류하고 관리해요!",
