--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">All:chive</string>
+    <string name="app_name_dev">All:chive Dev</string>
     <string name="kakao_app_key">@string/ALLCHIVE_NATIVE_APP_KEY</string>
 </resources>
