--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -171,5 +171,9 @@
   "tagVerify": "한/영 20자 이내 입력",
   "errorDialogRetry": "재시도",
   "publicArchiving": "공개 아카이빙",
-  "archivingVerify": "한/영 15자 이내 입력"
+  "archivingVerify": "한/영 15자 이내 입력",
+  "introduceAllchive": "올카이브의 커뮤니티를 소개합니다",
+  "saveYourFavoriteArchives": "마음에 드는 아카이빙을 저장해보세요!",
+  "reportBadArchives": "정책을 위반한 아카이빙은 신고하세요!",
+  "start": "시작하기"
 }
