feat: add account delete api

--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -178,11 +178,11 @@
   "start": "시작하기",
   "tellUsWithdrawalReason": "탈퇴 이유를 알려주세요!",
   "useServiceImpromentMaterial": "서비스 개선에 중요한 자료로 활용하겠습니다.",
-  "infrequentlyUsed": "자주 사용하지 않아서",
-  "lotsOfBugs": "이용이 불편하고 장애가 많아서",
-  "useOtherServices": "다른 대체 서비스를 이용해서",
-  "feeIsExpensive": "서비스 이용료가 비싸서",
-  "createNewAccount": "새 계정을 만들고 싶어서",
+  "NOT_USED": "자주 사용하지 않아서",
+  "UNCONFORTABLE": "이용이 불편하고 장애가 많아서",
+  "USE_OTHER_SERVICE": "다른 대체 서비스를 이용해서",
+  "EXPENSIVE": "서비스 이용료가 비싸서",
+  "NEW_ACCOUNT": "새 계정을 만들고 싶어서",
   "withdrawal": "탈퇴하기",
   "etc": "기타"
 }
